kubernetes-manifests/network/network.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: default-server-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
